# Moamoa_caterpillar_firmware

./: .gitattributes  .gitignore  20260615---caterpillar---nrf54l15-dk-motor-drive-test.html  20260621---caterpillar---board-testing-and-max5419-saturation.html  20260622---caterpillar---eval-board-strategy-and-max5417-resistance-change.html  20260624---caterpillar---ble-pwm-frequency-control-via-python.html  20260702---caterpillar---lipo-battery-test-fried-inductor.html  20260702---caterpillar---next-board-revision-fixes.html  20260702---caterpillar---schematic-to-firmware-cross-check.html  20260702---caterpillar---why-vdc-saturates-at-3.1v.html  20260704---caterpillar---board-redesign-in-kicad.html  20260706---caterpillar---motor-rail-failure-root-cause-closed.html  20260706---caterpillar---rev-2-electrical-design-complete.html  20260707---caterpillar---rev-2-copper-layout-and-dfm-review.html  404.html  CLAUDE.md  CMakeLists.txt  Kconfig  PUBLISHING-GUIDE.md  README.md  VERSION  index-cf6c8581.css  index.html  index.xml  prescript-20e13e31.js  prj.conf  publish.sh  quartz.config.yaml  settings.yml  sitemap.xml  sysbuild.conf
Boards/kamoamoa/caterpillar/: Kconfig.defconfig  board.cmake  board.yml  caterpillar_common.dtsi  caterpillar_nrf54l15-pinctrl.dtsi  caterpillar_nrf54l15_cpuapp.dts  caterpillar_nrf54l15_cpuapp.yaml  caterpillar_nrf54l15_cpuapp_common.dtsi  caterpillar_nrf54l15_cpuapp_defconfig  caterpillar_nrf54l15_cpuflpr.dts  caterpillar_nrf54l15_cpuflpr.yaml  caterpillar_nrf54l15_cpuflpr_defconfig
boards/kamoamoa/caterpillar/: Kconfig  Kconfig.caterpillar  caterpillar_common.dtsi  caterpillar_nrf54l15-pinctrl.dtsi  caterpillar_nrf54l15_cpuapp.dts  caterpillar_nrf54l15_cpuapp_common.dtsi  caterpillar_nrf54l15_cpuflpr.dts  caterpillar_nrf54l15_cpuflpr_defconfig
common/: imu_shared.h
docs/: architecture.md  ble-protocol.md  build-flash-ota.md  imu-logging.md  settings.md
flpr/: CMakeLists.txt  VERSION  prj.conf
flpr/src/: driver_asm330lhh.c  driver_asm330lhh.h  main.c
quartz/styles/: custom.scss
scripts/: ble_control.py  caterpillar_gui.py  fleet.py  generate_settings.py  protocol.py  protocol_limits.py  requirements.txt
src/: app.c  device_cmd.c  device_cmd.h  imu_log.c  imu_log.h  imu_pump.c  imu_pump.h  main.c  myfunc.c  myfunc.h  session.c  settings_gen.h
src/app/: app.c  app.h  device_cmd.c  device_cmd.h  session.c  session.h
src/ble/: ble_interface.c  ble_transport.c  ble_transport.h  ble_uuids.h
src/drivers/: driver_asm330lhh.c  driver_asm330lhh.h  driver_drv8212.c  driver_drv8212.h  driver_led.c  driver_led.h  driver_pwm.c  driver_pwm.h  driver_stbb1_apur.c  driver_stbb1_apur.h  driver_vdc_sense.c  driver_vdc_sense.h  max5419.c  max5419.h
src/imu/: flpr_launch.c  flpr_launch.h  imu_log.c  imu_log.h  imu_pump.c
src/interface/: ble_interface.c  ble_interface.h  ble_transport.c  ble_uuids.h
src/settings/: settings_gen.h  settings_store.c  settings_store.h
static/: contentIndex.json
sysbuild/: mcuboot.conf
tags/: ble.html  caterpillar.html  firmware.html  hardware.html  index.html  kamoamoa.html  pcb-design.html  testing.html
