cmake_minimum_required(VERSION 3.20.0)

# Custom board lives at the repo root (one level up)
list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(caterpillar_flpr)

target_sources(app PRIVATE
    src/main.c
    src/driver_asm330lhh.c
)

# For common/imu_shared.h
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
